--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,11 @@
             "production": {
               "budgets": [
                 {
+                  "type": "css",
+                  "maximumWarning": "4kb",
+                  "maximumError": "6kb"
+                },
+                {
                   "type": "initial",
                   "maximumWarning": "500kb",
                   "maximumError": "1mb"
